--- a/infra/tomcat-stateful.yaml
+++ b/infra/tomcat-stateful.yaml
@@ -6,7 +6,7 @@ metadata:
     app: tomcat
 spec:
   replicas: 1
-  serviceName: "tomcat-service"
+  serviceName: tomcat-service
   selector:
     matchLabels:
       app: tomcat
@@ -16,54 +16,60 @@ spec:
         app: tomcat
     spec:
       volumes:
-      - name: shared-secrets
-        emptyDir: {}
-      - name: tomcat-data
-        persistentVolumeClaim:
-          claimName: tomcat-data
-      - name: tomcat-logs
-        persistentVolumeClaim:
-          claimName: tomcat-logs
-      containers:
-      - name: tomcat
-        image: tomcat:9.0-jdk11-openjdk-slim
-        ports:
-        - containerPort: 8080
-        volumeMounts:
+        - name: shared-secrets
+          emptyDir: {}
         - name: tomcat-data
-          mountPath: /usr/local/tomcat/webapps
+          persistentVolumeClaim:
+            claimName: tomcat-data
         - name: tomcat-logs
-          mountPath: /usr/local/tomcat/logs
-        - name: shared-secrets
-          mountPath: /etc/secrets
-      - name: vault-agent
-        image: vault:1.8.0
-        env:
-          - name: VAULT_ADDR
-            value: "http://vault.server:8200"
-        args: ["agent", "-config=/vault/config/agent-config.hcl"]
-        volumeMounts:
-        - name: shared-secrets
-          mountPath: /etc/secrets
+          persistentVolumeClaim:
+            claimName: tomcat-logs
+      containers:
+        - name: tomcat
+          image: 'tomcat:9.0-jdk11-openjdk-slim'
+          ports:
+            - containerPort: 8080
+          volumeMounts:
+            - name: tomcat-data
+              mountPath: /usr/local/tomcat/webapps
+            - name: tomcat-logs
+              mountPath: /usr/local/tomcat/logs
+            - name: shared-secrets
+              mountPath: /etc/secrets
+        - name: vault-agent
+          image: 'vault:1.8.0'
+          env:
+            - name: VAULT_ADDR
+              value: 'http://vault.server:8200'
+          args:
+            - agent
+            - '-config=/vault/config/agent-config.hcl'
+          volumeMounts:
+            - name: shared-secrets
+              mountPath: /etc/secrets
       initContainers:
-      - name: vault-agent-init
-        image: vault:1.8.0
-        env:
-          - name: VAULT_ADDR
-            value: "http://vault.server:8200"
-        args: ["agent", "-config=/vault/config/agent-config-init.hcl"]
+        - name: vault-agent-init
+          image: 'vault:1.8.0'
+          env:
+            - name: VAULT_ADDR
+              value: 'http://vault.server:8200'
+          args:
+            - agent
+            - '-config=/vault/config/agent-config-init.hcl'
   volumeClaimTemplates:
-  - metadata:
-      name: tomcat-data
-    spec:
-      accessModes: [ "ReadWriteOnce" ]
-      resources:
-        requests:
-          storage: 1Gi
-  - metadata:
-      name: tomcat-logs
-    spec:
-      accessModes: [ "ReadWriteOnce" ]
-      resources:
-        requests:
-          storage: 1Gi
+    - metadata:
+        name: tomcat-data
+      spec:
+        accessModes:
+          - ReadWriteOnce
+        resources:
+          requests:
+            storage: 1Gi
+    - metadata:
+        name: tomcat-logs
+      spec:
+        accessModes:
+          - ReadWriteOnce
+        resources:
+          requests:
+            storage: 1Gi
