--- a/infra/role-bindings-deprecated.yaml
+++ b/infra/role-bindings-deprecated.yaml
@@ -1,6 +1,5 @@
----
 # Role Definition
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   namespace: default
@@ -12,7 +11,7 @@ rules:
 
 ---
 # RoleBinding Definition
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: read-pods
