--- a/infra/java-app-deploy.yaml
+++ b/infra/java-app-deploy.yaml
@@ -23,6 +23,9 @@ spec:
           volumeMounts:
             - name: shared-secrets
               mountPath: /etc/secrets
+          securityContext:
+            runAsNonRoot: true
+            allowPrivilegeEscalation: false
         - name: vault-agent
           image: 'vault:1.8.0'
           env:
@@ -40,6 +43,10 @@ spec:
             - '-config=/vault/config/agent-config.hcl'
           securityContext:
             runAsUser: 100
+            runAsNonRoot: true
+            allowPrivilegeEscalation: false
+          command:
+            - vault
       initContainers:
         - name: vault-agent-init
           image: 'vault:1.8.0'
@@ -51,3 +58,7 @@ spec:
             - '-config=/vault/config/agent-config-init.hcl'
           securityContext:
             runAsUser: 100
+            runAsNonRoot: true
+            allowPrivilegeEscalation: false
+          command:
+            - vault
